Inicio do crud das comandas
